# omni-wagtail-library

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.txt  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
app/: settings.py  wsgi.py
omni_wagtail_library/: __init__.py  abstract_models.py  blocks.py  models.py
omni_wagtail_library/migrations/: 0001_initial.py  0002_alter_streamfield_blocks.py  0003_add_teaser_fields.py
omni_wagtail_library/templates/omni_wagtail_library/: library_item_detail_page.html  library_listing_page.html
omni_wagtail_library/tests/: factories.py  test_blocks.py  test_models.py
tests/: factories.py  settings.py  test_blocks.py  test_models.py  urls.py
wagtail_library/: __init__.py  abstract_models.py  blocks.py  models.py
wagtail_library/migrations/: 0001_initial.py
wagtail_library/templates/wagtail_library/: library_detail.html  library_detail_block.html
