[metadata]
description-file = README.md

[flake8]
max-line-length = 101
exclude = .eggs,.git,.tox,app/,env/,build,dist,*/migrations/*,*/node_modules/*,node_modules/*
ignore = W503,T001  # until flake8 is sorted out

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
# -- recommended but optional:
python_files = tests.py test_*.py *_tests.py
# addopts = --reuse-db
